<resources>
    <string name="app_name">Percentage Calculator</string>
    <string name="calculate">Calculate</string>
    <string name="calculator_heading">Percentage Calculator</string>
    <string name="percent">Percent %</string>
    <string name="amount">Amount</string>
    <string name="previous">previous</string>
    <string name="action_settings">Settings</string>
    <string name="Output">Output</string>
    <string name="action_home">Home</string>
    <string name="decimal_calculations">Decimal Calculations</string>
    <string name="dark_theme">Dark Theme</string>
</resources>
